src/test/deca/context/valid/created/miscellaneous/empty_main.deca
// Description :
//		Programme avec un main vide
//
// Resultats :
//		Ok


{
}